[package]
name = "recho"
version = "0.1.0"
edition = "2024"

[dependencies]
piper-rs = "0.1.9"
rodio = "0.21.1"
ort = { version = "=2.0.0-rc.9" }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
whisper-rs = { version = "0.15.1", features = ["vulkan"] }
hound = "3.5.1"
cpal = "0.15"
samplerate = "0.2.4"
colored = "3.0.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sentencex = "0.1.13"
clap = { version = "4.0", features = ["derive"] }